// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channels actions creates FETCH_CHANNELS_FAILURE when fetching channels has been rejected 1`] = `
Array [
  Object {
    "type": "FETCH_CHANNELS_REQUEST",
  },
  Object {
    "type": "FETCH_CHANNELS_FAILURE",
  },
]
`;

exports[`channels actions creates FETCH_CHANNELS_FAILURE when fetching subscriptions has been rejected 1`] = `
Array [
  Object {
    "type": "FETCH_CHANNELS_REQUEST",
  },
  Object {
    "type": "FETCH_CHANNELS_FAILURE",
  },
]
`;

exports[`channels actions creates FETCH_CHANNELS_SUCCESS when fetching channels has been resolved 1`] = `
Array [
  Object {
    "type": "FETCH_CHANNELS_REQUEST",
  },
  Object {
    "payload": Array [
      "UCyIe-61Y8C4_o-zZCtO4ETQ",
      "UCO1cgjhGzsSYb1rsB4bFe4Q",
    ],
    "type": "FETCH_CHANNELS_SUCCESS",
  },
]
`;

exports[`channels actions creates FETCH_CHANNELS_SUCCESS when fetching subscriptions has resolved with null 1`] = `
Array [
  Object {
    "type": "FETCH_CHANNELS_REQUEST",
  },
  Object {
    "payload": Array [],
    "type": "FETCH_CHANNELS_SUCCESS",
  },
]
`;

exports[`channels actions creates FETCH_CHANNELS_SUCCESS when fetching subscriptions has resolved with undefined 1`] = `
Array [
  Object {
    "type": "FETCH_CHANNELS_REQUEST",
  },
  Object {
    "payload": Array [],
    "type": "FETCH_CHANNELS_SUCCESS",
  },
]
`;

exports[`channels actions should create an action to handle an error 1`] = `
Object {
  "type": "FETCH_CHANNELS_FAILURE",
}
`;

exports[`channels actions should create an action to receive channels 1`] = `
Object {
  "payload": Array [
    "UCyIe-61Y8C4_o-zZCtO4ETQ",
    "UCO1cgjhGzsSYb1rsB4bFe4Q",
  ],
  "type": "FETCH_CHANNELS_SUCCESS",
}
`;

exports[`channels actions should create an action to request channels 1`] = `
Object {
  "type": "FETCH_CHANNELS_REQUEST",
}
`;

exports[`channels actions should create an action to update the active channel 1`] = `
Array [
  Object {
    "payload": "UCO1cgjhGzsSYb1rsB4bFe4Q",
    "type": "UPDATE_ACTIVE_CHANNEL",
  },
]
`;
